# Zimbabwe-Law-AI-Evidence-Layer

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GITHUB_PUBLISHING.md  LICENSE  LICENSE_DATA.md  Makefile  README.md  SECURITY.md  SHA256SUMS  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: data-correction.yml  security.yml
.github/workflows/: ci.yml  dataset-audit.yml
data/: README.md
data/curated/: README.md
data/index/: README.md  zimbabwe_2022_law_reports_index.csv
data/metadata/: README.md  classification_anomalies.csv  dataset_manifest.json  dataset_statistics.json  duplicate_source_occurrences.csv  manual_review_queue.csv  normalization_log.csv  normalization_log.rebuilt.csv  repository_manifest.json  sensitive_content_scan.json  validation_report.json  validation_report.rebuilt.json
data/processed/: README.md  zimbabwe_2022_law_reports_metadata_only.jsonl
data/public/: README.md  (+2 more)
docs/: ARCHITECTURE.md  DATA_CARD.md  DEPLOYMENT_BOUNDARIES.md  KNOWN_LIMITATIONS.md  METHODOLOGY.md  RELEASE_POLICY.md  REPOSITORY_STRUCTURE.md  SYSTEM_CARD.md
examples/: query_example.py
schemas/: DATA_DICTIONARY.md  zimbabwe_2022_law_report_record.schema.json
scripts/: build_public_release.py  build_submission_pack.py  generate_manifest.py  normalise_dataset.py  publish_to_github.ps1  run_all_checks.ps1  search_dataset.py  validate_dataset.py  verify_hashes.py
tests/: test_dataset.py  test_normalise.py  test_public_release.py  test_validation.py
(+59 files in other folders)
